--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ p{
     text-align: center;
     padding-bottom: 3%;
   }
-  .press-image{
+  .press-img{
     width: 15%;
     padding: 0 20px;
     margin: 20px 20px 20px 50 px;
